# themis

./: .gitignore  CMakeLists.txt  install_vcpkg.sh
docs/examples/c++/: CMakeLists.txt  Makefile  lic_gen.cpp  readme.md
